# aos_core_lib_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  doxygen.cfg  host_build.sh  suppressions.txt
.github/workflows/: build_test.yaml  check_format.yaml  clang_format.yaml  static_analysis.yaml
CMakeModules/: CodeCoverage.cmake
conan/: conan-mbedtls.py  conanfile.py  mbedtls-v3.5.0.patch
include/aos/common/: array.hpp  buffer.hpp  config.hpp  connectionsubsc.hpp  crypto.hpp  cryptoutils.hpp  downloader.hpp  enum.hpp  error.hpp  log.hpp  monitoring.hpp  ocispec.hpp  osicpec.hpp  resourcemonitor.hpp  ringbuffer.hpp  string.hpp  stringer.hpp  thread.hpp  time.hpp  types.hpp  utils.hpp  uuid.hpp
include/aos/common/config/: log.hpp  new.hpp  thread.hpp  types.hpp
include/aos/common/crypto/mbedtls/: cryptoprovider.hpp  driverwrapper.hpp  mbedtls_config.h  psa_crypto_driver_wrappers.h
include/aos/common/crypto/mbedtls/drivers/aos/: driver.h  driverwrap.hpp
include/aos/common/monitoring/: average.hpp  monitoring.hpp  resourcemonitor.hpp
include/aos/common/pkcs11/: pkcs11.hpp  privatekey.hpp
include/aos/common/pkcs11/cryptoki/: .clang-format
include/aos/common/tools/: allocator.hpp  array.hpp  buffer.hpp  config.hpp  enum.hpp  error.hpp  fs.hpp  function.hpp  log.hpp  logger.hpp  map.hpp  memory.hpp  new.hpp  noncopyable.hpp  optional.hpp  os.hpp  queue.hpp  ringbuffer.hpp  string.hpp  thread.hpp  time.hpp  timer.hpp  utils.hpp  uuid.hpp  variant.hpp
include/aos/iam/: certhandler.hpp  certmodule.hpp  config.hpp  identhandler.hpp  nodeinfoprovider.hpp  nodemanager.hpp  permhandler.hpp  provisionmanager.hpp
include/aos/iam/certmodules/: certmodule.hpp  hsm.hpp
include/aos/iam/certmodules/pkcs11/: pkcs11.hpp
include/aos/iam/identhandler/: fileidentifier.hpp
include/aos/iam/identmodules/: fileidentifier.hpp
include/aos/iam/modules/: certmodule.hpp  config.hpp  hsm.hpp
include/aos/iam/modules/pkcs11/: config.hpp  pkcs11.hpp
include/aos/iam/nodemanager/: nodemanager.hpp
include/aos/sm/: config.hpp  instance.hpp  launcher.hpp  resourcemanager.hpp  runner.hpp  service.hpp  servicemanager.hpp
src/common/: CMakeLists.txt  cryptoutils.cpp  uuid.cpp  version.hpp.in
src/common/crypto/: log.hpp
src/common/crypto/mbedtls/: cryptoprovider.cpp  driverwrapper.cpp  psa_crypto_driver_wrappers.c  psa_crypto_driver_wrappers_no_static.c
src/common/crypto/mbedtls/drivers/: psa_crypto.c  psa_crypto_driver_wrappers.h  psa_crypto_driver_wrappers_no_static.c
src/common/crypto/mbedtls/drivers/aos/: driverwrap.cpp  psa_crypto_driver_aos.h
src/common/error/: error.hpp  error_test.cpp
src/common/log/: config.hpp  log.hpp  log_test.cpp
src/common/monitoring/: average.cpp  log.hpp  monitoring.cpp  resourcemonitor.cpp
src/common/pkcs11/: log.hpp  pkcs11.cpp  privatekey.cpp
src/common/resourcemonitor/: log.hpp  resourcemonitor.cpp
src/common/src/: utils_test.cpp
src/common/tools/: uuid.cpp
src/common/utils/: stringer.hpp  utils.hpp  utils_test.cpp
src/iam/: CMakeLists.txt
src/iam/certhandler/: certhandler.cpp  certhandler.hpp  certhandler_test.cpp  certmodule.cpp  log.hpp
src/iam/certhandler/modules/: certmodule.cpp
src/iam/certhandler/modules/pkcs11/: pkcs11.cpp
src/iam/certmodules/: certmodule.cpp
src/iam/certmodules/pkcs11/: pkcs11.cpp
src/iam/identhandler/: fileidentifier.cpp  log.hpp
src/iam/identmodules/: fileidentifier.cpp  log.hpp
src/iam/nodeinfoprovider/: nodeinfoprovider.cpp
src/iam/nodemanager/: log.hpp  nodemanager.cpp
src/iam/permhandler/: log.hpp  permhandler.cpp
src/iam/provisionmanager/: log.hpp  provisionmanager.cpp
src/sm/: CMakeLists.txt
src/sm/launcher/: instance.cpp  launcher.cpp  launcher.hpp  launcher_test.cpp  log.hpp  service.cpp
src/sm/resourcemanager/: log.hpp  resourcemanager.cpp
src/sm/servicemanager/: log.hpp  servicemanager.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt
tests/common/src/: array_test.cpp  buffer_test.cpp  crypto_test.cpp  cryptoutils_test.cpp  enum_test.cpp  error_test.cpp  log.hpp  log_test.cpp  monitoring_test.cpp  pkcs11_test.cpp  resourcemonitor_test.cpp  ringbuffer_test.cpp  string_test.cpp  thread_test.cpp  types_test.cpp  utils_test.cpp  uuid_test.cpp
tests/common/src/pkcs11/: CMakeLists.txt  pkcs11.cmake  pkcs11_test.cpp  pkcs11cert.der  pkcs11testenv.hpp
tests/common/src/tools/: allocator_test.cpp  array_test.cpp  buffer_test.cpp  enum_test.cpp  error_test.cpp  fs_test.cpp  function_test.cpp  log_test.cpp  map_test.cpp  memory_test.cpp  optional_test.cpp  queue_test.cpp  ringbuffer_test.cpp  string_test.cpp  thread_test.cpp  time_test.cpp  timer_test.cpp  uuid_test.cpp  variant_test.cpp
tests/iam/: CMakeLists.txt  iam_test.cpp
tests/iam/certhandler/: certhandler_test.cpp
tests/iam/certhandler/mocks/: hsm.hpp  privatekey.hpp  storage.hpp  x509provider.hpp
tests/iam/certmodules/: certmodules_test.cpp
tests/iam/identhandler/: fileidentifier_test.cpp
tests/iam/identmodules/: fileidentifier_test.cpp
tests/iam/nodeinfoprovider/: nodeinfoprovider_test.cpp
tests/iam/nodemanager/: nodemanager_test.cpp  storagemock.hpp
tests/iam/permhandler/: permhandler_test.cpp
tests/iam/provisionmanager/: provisionmanager_test.cpp
tests/iam/stubs/: storagestub.cpp
tests/include/mocks/: certhandlermock.hpp  certreceivermock.hpp  hsm.hpp  hsmmock.hpp  privatekey.hpp  provisioningcallbackmock.hpp  resourcemanagermock.hpp  subjectsobservermock.hpp  x509provider.hpp  x509providermock.hpp
tests/sm/: CMakeLists.txt
tests/sm/launcher/: launcher_test.cpp
tests/sm/resourcemanager/: resourcemanager_test.cpp
tests/sm/servicemanager/: servicemanager_test.cpp
tests/utils/: CMakeLists.txt  utils.hpp
tests/utils/cmake/: gencertificates.cmake
tests/utils/include/: log.hpp  softhsmenv.hpp  utils.hpp
tests/utils/src/: softhsm.cmake  softhsmenv.cpp
