#
# Copyright (C) 2024 Renesas Electronics Corporation.
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

# ######################################################################################################################
# Add subfolders
# ######################################################################################################################

add_subdirectory(utils)
add_subdirectory(common)
add_subdirectory(sm)
add_subdirectory(iam)
