set(TARGET aossmcpp)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES launcher/launcher.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_library(${TARGET} STATIC ${SOURCES})

# ######################################################################################################################
# Install
# ######################################################################################################################

set_target_properties(${TARGET} PROPERTIES PUBLIC_HEADER "launcher/launcher.hpp")

install(
    TARGETS ${TARGET}
    ARCHIVE DESTINATION lib
    PUBLIC_HEADER DESTINATION include/aoscore/sm
)
