#
# Copyright (C) 2023 Renesas Electronics Corporation.
# Copyright (C) 2023 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET aosiamcpp_test)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES iam_test.cpp stubs/storagestub.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})
target_link_libraries(${TARGET} aosiamcpp aoscommoncpp testutils GTest::gmock_main)

gtest_discover_tests(${TARGET})
